--- a/21_bt_ESS_choiS-liaoJ/index.html
+++ b/21_bt_ESS_choiS-liaoJ/index.html
@@ -20,10 +20,11 @@ K21 -- Who Does Frame Work For?
   </head>
   <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <h3 class="narvbar-brand">Creamy</h3>
+    <h3 class="narvbar-brand">LOGO goes here</h3>
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="#">Coldness</a>
-      <a class="nav-item nav-link" href="#">Sweetness</a>
+      <a class="nav-item nav-link" href="#">navbar element0</a>
+      <a class="nav-item nav-link" href="#">another link-y item</a>
+      <span class="navbar-text">plain text works too!</span>
     </div>
     </nav>
   <!-- container class helps to center all contents -->
@@ -31,40 +32,49 @@ K21 -- Who Does Frame Work For?
     <br>
     <div class="row">
       <!-- only columns may be the immediate children of rows -->
-      <div class="col">
-        uno
+      <div class="col-2">
+        The first of four columns that can be resized. 
       </div>
-      <div class="col">
-        dos
+      <div class="col-4">
+        The second column that has slightly more room for text than the first
       </div>
-      <div class="col">
-        tres
+      <div class="col-4">
+        The third column that is the twin to the second. All of the columns can be resized.
       </div>
-      <div class="col">
-        cuatro
+      <div class="col-2">
+        The fourth column of this row with the same space as the first. If you resize the window, we also adjust as well. 
       </div>
     </div>
     <br>
     <br>
     <div class="media">
-    <img class="mr-3" src="cream.jpg" alt="placeholder">
+    <img class="mr-3" src="cream.jpg" alt="media object example">
     <div class="media-body">
-      <h5 class="mt-0">THE CREAM
+      <h5 class="mt-0">I'm a h5. The badges are the same size as me.
       <span class="badge badge-secondary">left</span>
       <span class="nav-item badge badge-dark">right</span></h5> 
-      Yellowtail horse mackerel goosefish Manta Ray hoki slimy sculpin goldfish basslet goldfish Black pickerel; huchen, northern sea robin taimen. Blue-redstripe danio; black dragonfish salmon anemonefish ballan wrasse. Paradise fish, porgy tench eucla cod pirate perch longnose dace, cobia Sundaland noodlefish. Dusky grouper salmon spiny basslet convict cichlid sea bass eeltail catfish cobia, "Black scalyfin; sergeant major."
+      Try changing the heading to a h3... you'll see the badges become larger as well.
+      Bootstrap allows you to place text to a media object without having to format the layout manually. This description text goes to the side of the ice cream picture because it's the media body!
     </div>
   </div>
   <br>
-  <dt>Vanilla</dt>
+  <dt>This is a description list</dt>
   <dd>
-  False cat shark blue triggerfish scaly dragonfish darter: bonnetmouth armoured catfish redmouth whalefish daggertooth pike conger slimy sculpin. Pollyfish <mark>Atlantic eel</mark>, anglerfish electric stargazer huchen earthworm eel armorhead catfish snubnose eel Bengal danio. Black triggerfish trout blue whiting, bobtail snipe eel: sillago crucian carp paperbone: cod icefish glass catfish, flatfish platy. Pleco temperate perch titan <mark>triggerfish</mark>; sand tilefish: pipefish bobtail snipe eel--stoneroller minnow, pupfish. Silverside basking shark kingfish herring Black triggerfish large-eye bream redtooth triggerfish; medusafish.
+  conveniently bolded subtitles
+  </dd>
+  <dt>subtitle1</dt>
+  <dd>
+  can be displayed as a table with more formatting
   </dd>
   <br>
   <blockquote class="blockquote text-center">
-  <p>Eel cod Billfish crocodile icefish jewelfish yellowbelly tail catfish oldwife combtooth blenny sillago coelacanth peacock flounder Antarctic cod.</p>
-  <footer class="blockquote-footer"><cite>https://tunaipsum.com/</cite></footer>
-</blockquote>
+  <p>Here we have a block quote that has been centered. The citation below can both be italized and not depending on what you want the user to see.</p>
+  <footer class="blockquote-footer">From <cite>https://tunaipsum.com/</cite></footer>
+  </blockquote>
+  <div class = "row justify-content-center">
+    <button type="button" class = "btn btn-danger"> New Row, center style. </button>
+    <p>The button above and this text are in a new row with format to center. The button type is danger and can be changed depending on what you need it for.</p>
+   </div>
   </div>
   </body>
 </html>
