--- a/29_js/open_me.html
+++ b/29_js/open_me.html
@@ -8,11 +8,15 @@
     <title>JS work the first</title>
   </head>
   <body>
-    <button id="fib">Get fib</button>
-    <button id="gcd">Get gcd</button>
+    <H1>OPEN UP YOUR DEV CONSOLE AND RUN YOUR JS FUNCTIONS!!!</H1>
+    <h3>(Ctrl-Shift-J in Chrome)</h3>
+    <h3>(Ctrl-Shift-K in Firefox)</h3>
+    <button id="fib">Get fib(7)</button>
+    <br><br>
+    <button id="gcd">Get gcd(24,90)</button>
+    <br><br>
     <button id="random">Get random student</button>
 
     <script src="funky_town.js"></script>
   </body>
 </html>
-
