--- a/29_js/open_me.html
+++ b/29_js/open_me.html
@@ -17,6 +17,7 @@
     <br><br>
     <button id="random">Get random student</button>
 
+    <p id="data"></p>
     <script src="funky_town.js"></script>
   </body>
 </html>
